branches/0.3.7/ponoff/unit1.rst

# hash value = 136920065
unit1.message0=#208#146#208#189#208#184#208#188#208#176#208#189#208#184#208+
#181'!'


# hash value = 180586798
unit1.message1=#208#151#208#176#208#191#209#131#209#129#208#186' '#209#141+
#209#130#208#190#208#185' '#208#191#209'€'#208#190#208#179#209'€'#208#176+
#208#188#208#188#209#139' '#208#178#208#190#208#183#208#188#208#190#208#182+
#208#181#208#189' '#209#130#208#190#208#187#209#140#208#186#208#190' '#208+
#191#208#190#208#180' '#208#176#208#180#208#188#208#184#208#189#208#184#209+
#129#209#130#209'€'#208#176#209#130#208#190#209'€'#208#190#208#188' '#208+
#184#208#187#208#184' '#209#129' '#209'€'#208#176#208#183#209'€'#208#181#209+
#136#208#181#208#189#208#184#209#143' '#208#176#208#180#208#188#208#184#208+
#189#208#184#209#129#209#130#209'€'#208#176#209#130#208#190#209'€'#208#176+
'. '#208#157#208#176#208#182#208#188#208#184#209#130#208#181' <'#208#158#208+
#154'> '#208#180#208#187#209#143' '#208#190#209#130#208#186#208#176#208#183+
#208#176' '#208#190#209#130' '#208#183#208#176#208#191#209#131#209#129#208+
#186#208#176'.'


# hash value = 181622977
unit1.message2=#208#157#208#181' '#208#190#208#177#208#189#208#176#209'€'#209+
#131#208#182#208#181#208#189#208#190' '#208#189#208#184' '#208#190#208#180+
#208#189#208#190#208#179#208#190' '#209#129#208#181#209'€'#208#178#208#184+
#209#129#208#176', '#209#129#208#191#208#190#209#129#208#190#208#177#208#189+
#208#190#208#179#208#190' '#209#131#208#191#209'€'#208#176#208#178#208#187+
#209#143#209#130#209#140' '#209#129#208#181#209#130#209#140#209#142'. '#208+
#154#208#190#209'€'#209'€'#208#181#208#186#209#130#208#189#208#176#209#143+
' '#209'€'#208#176#208#177#208#190#209#130#208#176' '#208#191#209'€'#208#190+
#208#179#209'€'#208#176#208#188#208#188#209#139' '#208#189#208#181#208#178+
#208#190#208#183#208#188#208#190#208#182#208#189#208#176'!'


# hash value = 124330478
unit1.message3=#208#161#208#189#208#176#209#135#208#176#208#187#208#176' '+
#209#129#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#184#209'€'#209#131#208#185#209#130#208#181' '#209#129#208#190#208#181#208+
#180#208#184#208#189#208#181#208#189#208#184#208#181': '#208#156#208#181#208+
#189#209#142'->'#208#163#209#130#208#184#208#187#208#184#209#130#209#139'-'+
'>'#208#161#208#184#209#129#209#130#208#181#208#188#208#189#209#139#208#181+
'('#208#184#208#187#208#184' '#208#156#208#181#208#189#209#142'->'#208#152+
#208#189#209#130#208#181#209'€'#208#189#208#181#209#130')->vpnpptp('#208#157+
#208#176#209#129#209#130#209'€'#208#190#208#185#208#186#208#176' '#209#129+
#208#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#209#143' '+
'VPN PPTP/L2TP/OpenL2TP).'


# hash value = 211840494
unit1.message4='No ethernet. C'#208#181#209#130#208#181#208#178#208#190#208+
#185' '#208#184#208#189#209#130#208#181#209'€'#209#132#208#181#208#185#209+
#129' '#208#180#208#187#209#143' VPN PPTP/L2TP/OpenL2TP '#208#189#208#181+
#208#180#208#190#209#129#209#130#209#131#208#191#208#181#208#189'.'


# hash value = 9484126
unit1.message5='No link. '#208#161#208#181#209#130#208#181#208#178#208#190+
#208#185' '#208#186#208#176#208#177#208#181#208#187#209#140' '#208#180#208+
#187#209#143' VPN PPTP/L2TP/OpenL2TP '#208#189#208#181#208#191#208#190#208+
#180#208#186#208#187#209#142#209#135#208#181#208#189'.'


# hash value = 222576661
unit1.message6=#208#161#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#181

# hash value = 211494958
unit1.message7=#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208+
#187#208#181#208#189#208#190

# hash value = 263018018
unit1.message8=#208#190#209#130#209#129#209#131#209#130#209#129#209#130#208+
#178#209#131#208#181#209#130

# hash value = 82266734
unit1.message9='No link. '#208#161#208#181#209#130#208#181#208#178#208#190+
#208#185' '#208#186#208#176#208#177#208#181#208#187#209#140' '#208#180#208+
#187#209#143' VPN PPTP/L2TP/OpenL2TP '#208#189#208#181#208#191#208#190#208+
#180#208#186#208#187#209#142#209#135#208#181#208#189'. '#208#144' '#209'€'+
#208#181#208#186#208#190#208#189#208#189#208#181#208#186#209#130' '#208#189+
#208#181' '#208#178#208#186#208#187#209#142#209#135#208#181#208#189'.'


# hash value = 79712232
unit1.message10=#208#146#209#139#209#133#208#190#208#180' '#208#177#208#181+
#208#183' '#208#176#208#178#208#176#209'€'#208#184#208#184

# hash value = 98426840
unit1.message11=#208#146#209#139#209#133#208#190#208#180' '#208#191#209'€'+
#208#184' '#208#176#208#178#208#176#209'€'#208#184#208#184

# hash value = 92508176
unit1.message12=#208#163#209#129#209#130#208#176#208#189#208#176#208#178#208+
#187#208#184#208#178#208#176#208#181#209#130#209#129#209#143' '#209#129#208+
#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#208#181' '


# hash value = 263623008
unit1.message13=#208#159#208#190#208#187#209#131#209#135#208#181#208#189#209+
#139' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209#130#209#139' '#209+
#135#208#181#209'€'#208#181#208#183' DHCP. '


# hash value = 242528736
unit1.message14=#208#158#208#177#208#189#208#176#209'€'#209#131#208#182#208+
#181#208#189' '#208#189#208#190#208#178#209#139#208#185' IP-'#208#176#208+
#180#209'€'#208#181#209#129' VPN-'#209#129#208#181#209'€'#208#178#208#181+
#209'€'#208#176'. '#208#161#208#190#208#181#208#180#208#184#208#189#208#181+
#208#189#208#184#208#181' '#208#191#208#181#209'€'#208#181#208#189#208#176+
#209#129#209#130#209'€'#208#176#208#184#208#178#208#176#208#181#209#130#209+
#129#209#143'... '


# hash value = 61211408
unit1.message15='VPN-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208#181#209#130#209+
#129#209#143'. '


# hash value = 83227086
unit1.message16=#208#148#208#190#209#129#209#130#209#131#208#191' '#208#178+
' '#208#184#208#189#209#130#208#181#209'€'#208#189#208#181#209#130' '#208+
#190#209#130#209#129#209#131#209#130#209#129#209#130#208#178#209#131#208#181+
#209#130'...'


# hash value = 85567104
unit1.message17='DNS-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#190#209#130#208#178#208#181#209#135#208+
#176#208#181#209#130' '#208#184#208#187#208#184' '#208#189#208#181#208#186+
#208#190#209'€'#209'€'#208#181#208#186#209#130#208#189#209#139#208#185' '#208+
#176#208#180#209'€'#208#181#209#129' VPN-'#209#129#208#181#209'€'#208#178+
#208#181#209'€'#208#176'. '


# hash value = 46608128
unit1.message18=#208#168#208#187#209#142#208#183' '#208#187#208#190#208#186+
#208#176#208#187#209#140#208#189#208#190#208#185' '#209#129#208#181#209#130+
#208#184' '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143'. '


# hash value = 140008241
unit1.message19=#208#159#209'€'#208#190#208#178#208#181#209'€'#208#181#208+
#189#208#190'! '#208#152#208#189#209#130#208#181#209'€'#208#189#208#181#209+
#130' '#209'€'#208#176#208#177#208#190#209#130#208#176#208#181#209#130'!'


# hash value = 91157950
unit1.message20=#208#158#208#177#208#189#208#176#209'€'#209#131#208#182#208+
#181#208#189#208#190' '#209#129#208#190#208#178#208#191#208#176#208#180#208+
#181#208#189#208#184#208#181' remote ip address '#209#129' IP-'#208#176#208+
#180#209'€'#208#181#209#129#208#190#208#188' '#209#129#208#176#208#188#208+
#190#208#179#208#190' VPN-'#209#129#208#181#209'€'#208#178#208#181#209'€'#208+
#176'. '#208#161#208#190#208#181#208#180#208#184#208#189#208#181#208#189#208+
#184#208#181' '#208#177#209#139#208#187#208#190' '#208#191#208#181#209'€'#208+
#181#208#189#208#176#209#129#209#130#209'€'#208#190#208#181#208#189#208#190+
'.'


# hash value = 74300800
unit1.message21=#208#158#209#136#208#184#208#177#208#186#208#176' '#208#191+
#208#190#208#187#209#131#209#135#208#181#208#189#208#184#209#143' '#208#188+
#208#176#209'€'#209#136#209'€'#209#131#209#130#208#190#208#178' '#209#135+
#208#181#209'€'#208#181#208#183' DHCP. '


# hash value = 51507786
unit1.message22=#208#161#209#130#208#176#209#130#209#131#209#129':'


# hash value = 35493024
unit1.message23='DNS1-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143'. '


# hash value = 120427680
unit1.message24='DNS2-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143'. '


# hash value = 42794782
unit1.message25=#208#146#209#139' '#208#188#208#190#208#182#208#181#209#130+
#208#181' '#208#178' '#208#186#208#190#208#189#209#132#208#184#208#179#209+
#131#209'€'#208#176#209#130#208#190#209'€'#208#181' VPN PPTP/L2TP/OpenL2T'+
'P '#208#178#209#139#208#177#209'€'#208#176#209#130#209#140' '#208#190#208+
#191#209#134#208#184#209#142' '#209'€'#208#176#208#183#209'€'#208#181#209+
#136#208#181#208#189#208#184#209#143' '#208#191#208#190#208#187#209#140#208+
#183#208#190#208#178#208#176#209#130#208#181#208#187#209#143#208#188' '#209+
#131#208#191#209'€'#208#176#208#178#208#187#209#143#209#130#209#140' '#208+
#191#208#190#208#180#208#186#208#187#209#142#209#135#208#181#208#189#208#184+
#208#181#208#188'.'


# hash value = 171682270
unit1.message26=#208#146#209#139' '#209#130#208#176#208#186#208#182#208#181+
' '#208#188#208#190#208#182#208#181#209#130#208#181' '#209#129#208#186#208+
#190#208#189#209#132#208#184#208#179#209#131#209'€'#208#184#209'€'#208#190+
#208#178#208#176#209#130#209#140' '#209#129#208#190#208#181#208#180#208#184+
#208#189#208#181#208#189#208#184#208#181' '#208#184#208#183' '#208#166#208+
#181#208#189#209#130#209'€'#208#176' '#208#163#208#191#209'€'#208#176#208+
#178#208#187#208#181#208#189#208#184#209#143'->'#208#161#208#181#209#130#209+
#140' '#208#184' '#208#184#208#189#209#130#208#181#209'€'#208#189#208#181+
#209#130'->'#208#157#208#176#209#129#209#130#209'€'#208#190#208#185#208#186+
#208#176' VPN-'#209#129#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#185'->VPN PPTP/L2TP/OpenL2TP.'


# hash value = 163149050
unit1.message27=#208#151#208#176#208#179#209'€'#209#131#208#182#208#181#208+
#189#208#190':'


# hash value = 23288026
unit1.message28=#208#158#209#130#208#180#208#176#208#189#208#190':'


# hash value = 191775642
unit1.message29=#208#146#209'€'#208#181#208#188#209#143' '#208#178' '#209+
#129#208#181#209#130#208#184':'


# hash value = 55710
unit1.message30=#209#135'.'


# hash value = 56302
unit1.message31=#208#188'.'


# hash value = 55614
unit1.message32=#209#129'.'


# hash value = 895898
unit1.message33=#208#158#208#154

# hash value = 893360
unit1.message34=#208#148#208#176

# hash value = 229294738
unit1.message35=#208#157#208#181#209#130

# hash value = 69809520
unit1.message36=#208#158#209#130#208#188#208#181#208#189#208#176

# hash value = 265400286
unit1.message37=#208#156#208#184#208#189#209#131#209#130#208#190#209#135#208+
#186#209#131'...'


# hash value = 215691310
unit1.message38=#208#151#208#176#208#191#209#131#209#129#208#186#208#176#208+
#181#209#130#209#129#209#143' '#208#191#209'€'#208#184#208#187#208#190#208+
#182#208#181#208#189#208#184#208#181' ponoff...'


# hash value = 44018060
unit1.message39=#208#157#208#176#208#177#208#187#209#142#208#180#208#176#209+
#130#209#140

# hash value = 242013840
unit1.message40='DNS2-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#191#209'€'#208#184' '#208#191#208#190#208#180#208#189#209#143#209#130#208+
#190#208#188' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209+
#131#208#181#209#130#209#129#209#143'. '


# hash value = 83583838
unit1.message41=#208#158#208#177#208#189#208#176#209'€'#209#131#208#182#208+
#181#208#189#208#190' '#208#176#208#186#209#130#208#184#208#178#208#189#208+
#190#208#181' '#209#129#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#181' dsl. '#208#158#209#130#208#186#208#187#209#142#209#135+
#208#184#209#130#208#181' '#208#181#208#179#208#190' '#208#186#208#190#208+
#188#208#176#208#189#208#180#208#190#208#185' ifdown dsl0. '#208#157#208#176+
#208#182#208#188#208#184#209#130#208#181' <'#208#158#208#154'> '#208#180#208+
#187#209#143' '#208#190#209#130#208#186#208#176#208#183#208#176' '#208#190+
#209#130' '#208#183#208#176#208#191#209#131#209#129#208#186#208#176'.'


# hash value = 242014016
unit1.message42='DNS1-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#191#209'€'#208#184' '#208#191#208#190#208#180#208#189#209#143#209#130#208+
#190#208#188' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209+
#131#208#181#209#130#209#129#209#143'. '


# hash value = 154893773
unit1.message43=#208#160#208#181#208#186#208#190#208#188#208#181#208#189#208+
#180#209#131#208#181#209#130#209#129#209#143' '#208#178#209'€'#209#131#209+
#135#208#189#209#131#209#142' '#209#131#208#188#208#181#208#189#209#140#209+
#136#208#184#209#130#209#140' MTU/MRU, '#209#130#208#176#208#186' '#208#186+
#208#176#208#186' '#208#184#209#129#208#191#208#190#208#187#209#140#208#183+
#209#131#208#181#208#188#208#190#208#181' '#208#183#208#189#208#176#209#135+
#208#181#208#189#208#184#208#181' MTU ='


# hash value = 247024558
unit1.message44=#208#177#208#176#208#185#209#130' '#209#129#208#187#208#184+
#209#136#208#186#208#190#208#188' '#208#177#208#190#208#187#209#140#209#136+
#208#190#208#181'.'


# hash value = 155991790
unit1.message45=#208#160#208#176#208#183#208#188#208#181#209'€ '#209#132#208+
#176#208#185#208#187#208#176'-'#208#187#208#190#208#179#208#176' /var/log'+
'/syslog '#208#177#208#190#208#187#209#140#209#136#208#181' 1 GiB.'


# hash value = 88090942
unit1.message46=#208#146#208#190#208#183#208#188#208#190#208#182#208#189#209+
#139' '#208#191#209'€'#208#190#208#177#208#187#208#181#208#188#209#139' '#209+
#129' '#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208#187#208+
#181#208#189#208#184#208#181#208#188' '#209#129#208#190#208#181#208#180#208+
#184#208#189#208#181#208#189#208#184#209#143'...'


# hash value = 186565646
unit1.message47=#208#149#209#129#208#187#208#184' '#208#182#208#181' '#208+
#190#208#189' '#208#180#208#190#209#129#209#130#209#131#208#191#208#181#208+
#189', '#209#130#208#190' '#209#131#209#129#209#130#208#176#208#189#208#190+
#208#178#208#184#209#130#208#181' "'#208#157#208#181' '#208#186#208#190#208+
#189#209#130#209'€'#208#190#208#187#208#184#209'€'#208#190#208#178#208#176+
#209#130#209#140' state '#209#129#208#181#209#130#208#181#208#178#208#190+
#208#179#208#190' '#208#186#208#176#208#177#208#181#208#187#209#143'" '#208+
#178' '#208#154#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#176#209#130#208#190#209'€'#208#181'.'


# hash value = 214556448
unit1.message48=#208#158#209#130#209#129#209#131#209#130#209#129#209#130#208+
#178#209#131#209#142#209#130' '#208#189#208#181#208#186#209'€'#208#184#209+
#130#208#184#209#135#208#189#209#139#208#181' '#209#132#208#176#208#185#208+
#187#209#139': '


# hash value = 223412592
unit1.message49=#208#158#209#130#209#129#209#131#209#130#209#129#209#130#208+
#178#209#131#209#142#209#130' '#208#186#209'€'#208#184#209#130#208#184#209+
#135#208#189#209#139#208#181' '#209#132#208#176#208#185#208#187#209#139':'+
' '


# hash value = 179551077
unit1.message50=#208#157#208#181' '#208#189#208#176#208#185#208#180#208#181+
#208#189#208#190' '#209#129#208#190#208#181#208#180#208#184#208#189#208#181+
#208#189#208#184#208#181

# hash value = 126853452
unit1.message51=#208#158#208#177#208#189#208#176#209'€'#209#131#208#182#208+
#181#208#189#208#190' '#208#176#208#186#209#130#208#184#208#178#208#189#208+
#190#208#181' '#209#129#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#181' '#209#129' '#208#184#208#188#208#181#208#189#208#181+
#208#188

# hash value = 169705758
unit1.message52=#208#158#208#180#208#189#208#190#208#178#209'€'#208#181#208+
#188#208#181#208#189#208#189#209#139#208#185' '#208#183#208#176#208#191#209+
#131#209#129#208#186' '#208#189#208#181#209#129#208#186#208#190#208#187#209+
#140#208#186#208#184#209#133' '#209#129#208#190#208#181#208#180#208#184#208+
#189#208#181#208#189#208#184#208#185' '#209#129' '#209'€'#208#176#208#183+
#208#189#209#139#208#188#208#184' '#208#184#208#188#208#181#208#189#208#176+
#208#188#208#184' '#208#189#208#181#208#180#208#190#208#191#209#131#209#129+
#209#130#208#184#208#188'.'


# hash value = 156661070
unit1.message53=#208#158#209#130#209#129#209#131#209#130#209#129#209#130#208+
#178#209#131#208#181#209#130' '#208#180#208#181#209#132#208#190#208#187#209+
#130#208#189#208#190#208#181' '#209#129#208#190#208#181#208#180#208#184#208+
#189#208#181#208#189#208#184#208#181'.'


# hash value = 226222782
unit1.message54=#208#146#209#139#208#177#208#181#209'€'#208#184#209#130#208+
#181' '#208#190#208#180#208#189#208#190' '#208#184#208#183' '#208#180#208+
#190#209#129#209#130#209#131#208#191#208#189#209#139#209#133' '#209#129#208+
#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#208#185', '#208+
#189#208#181#209#143#208#178#208#187#209#143#209#142#209#137#208#184#209#133+
#209#129#209#143' '#208#180#208#181#209#132#208#190#208#187#209#130#208#189+
#209#139#208#188#208#184', '#208#184#208#183' '#208#178#209#139#208#191#208+
#176#208#180#208#176#209#142#209#137#208#181#208#179#208#190' '#209#129#208+
#191#208#184#209#129#208#186#208#176'. '#208#173#209#130#208#190' '#209#129+
#208#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#208#181' '+
#209#129#209#130#208#176#208#189#208#181#209#130' '#208#180#208#181#209#132+
#208#190#208#187#209#130#208#189#209#139#208#188'.'


# hash value = 87022638
unit1.message55='<'#208#158#208#154'> - '#208#178#209#139#208#177#209'€'#208+
#176#209#130#209#140'. <'#208#158#209#130#208#188#208#181#208#189#208#176+
'> - '#208#190#209#130#208#186#208#176#208#183#208#176#209#130#209#140#209+
#129#209#143' '#208#184' '#208#178#209#139#208#185#209#130#208#184'.'


# hash value = 253073004
unit1.message56=#208#161#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#181' '#209#129' '#208#184#208#188#208#181#208#189#208#181+
#208#188

# hash value = 16065790
unit1.message57=#208#189#208#181' '#208#188#208#190#208#182#208#181#209#130+
' '#209#129#209#131#209#137#208#181#209#129#209#130#208#178#208#190#208#178+
#208#176#209#130#209#140', '#209#130#208#176#208#186' '#208#186#208#176#208+
#186' '#209#141#209#130#208#190' '#208#184#208#188#209#143' '#208#183#208+
#176#209'€'#208#181#208#183#208#181#209'€'#208#178#208#184#209'€'#208#190+
#208#178#208#176#208#189#208#190' '#208#191#209'€'#208#190#208#179#209'€'#208+
#176#208#188#208#188#208#190#208#185'.'


# hash value = 145100544
unit1.message58=#208#168#208#187#209#142#208#183': '


# hash value = 119315296
unit1.message59='IP-'#208#176#208#180#209'€'#208#181#209#129': '


# hash value = 99714912
unit1.message60=#208#152#208#189#209#130#208#181#209'€'#209#132#208#181#208+
#185#209#129': '


# hash value = 207055807
unit1.message61=#208#159#208#190#208#182#208#181#209'€'#209#130#208#178#208+
#190#208#178#208#176#208#189#208#184#209#143

# hash value = 14699569
unit1.message62=#208#152#208#189#209#132#208#190#209'€'#208#188#208#176#209+
#134#208#184#209#143' '#208#190' '#208#178#208#190#208#183#208#188#208#190+
#208#182#208#189#208#190#209#129#209#130#208#184' '#208#191#208#190#208#182+
#208#181#209'€'#209#130#208#178#208#190#208#178#208#176#208#189#208#184#208+
#185' '#208#189#208#176' '#209'€'#208#176#208#183#209'€'#208#176#208#177#208+
#190#209#130#208#186#209#131'!'


# hash value = 40182878
unit1.message63=#208#161#208#186#208#190#209'€'#208#190#209#129#209#130#209+
#140' '#208#190#209#130#208#180#208#176#209#135#208#184' '#209#130#209'€'#208+
#184' '#209'€'#208#176#208#183#208#176' '#208#191#208#190#208#180#209'€'#209+
#143#208#180' '#208#178' '#209#130#208#181#209#135#208#181#208#189#208#184+
#208#181' '#209#130#209'€'#208#181#209#133' '#209#129#208#181#208#186#209+
#131#208#189#208#180' '#208#191#209'€'#208#181#208#178#209#139#209#129#208+
#184#208#187#208#176' '#208#191#209'€'#208#190#208#191#209#131#209#129#208+
#186#208#189#209#131#209#142' '#209#129#208#191#208#190#209#129#208#190#208+
#177#208#189#208#190#209#129#209#130#209#140' '#209#129#208#181#209#130#208+
#184'. '#208#161#208#181#209#130#209#140' '#208#189#208#181#209'€'#208#176+
#208#177#208#190#209#130#208#190#209#129#208#191#208#190#209#129#208#190#208+
#177#208#189#208#176'.'


# hash value = 74469422
unit1.message64=#208#161#208#186#208#190#209'€'#208#190#209#129#209#130#209+
#140' '#208#183#208#176#208#179#209'€'#209#131#208#183#208#186#208#184' '#209+
#130#209'€'#208#184' '#209'€'#208#176#208#183#208#176' '#208#191#208#190#208+
#180#209'€'#209#143#208#180' '#208#178' '#209#130#208#181#209#135#208#181+
#208#189#208#184#208#181' '#209#130#209'€'#208#181#209#133' '#209#129#208+
#181#208#186#209#131#208#189#208#180' '#208#191#209'€'#208#181#208#178#209+
#139#209#129#208#184#208#187#208#176' '#208#191#209'€'#208#190#208#191#209+
#131#209#129#208#186#208#189#209#131#209#142' '#209#129#208#191#208#190#209+
#129#208#190#208#177#208#189#208#190#209#129#209#130#209#140' '#209#129#208+
#181#209#130#208#184'.'


# hash value = 58474078
unit1.message65=#208#160#208#176#208#183#208#188#208#181#209'€ '#209#132#208+
#176#208#185#208#187#208#176'-'#208#187#208#190#208#179#208#176' /var/log'+
'/vpnlog '#208#177#208#190#208#187#209#140#209#136#208#181' 1 GiB.'


# hash value = 232218467
unit1.message66=#208#163#208#178#208#181#208#187#208#184#209#135#208#184#209+
#130#209#140' '#208#184#208#186#208#190#208#189#208#186#209#131

# hash value = 233897619
unit1.message67=#208#163#208#188#208#181#208#189#209#140#209#136#208#184#209+
#130#209#140' '#208#184#208#186#208#190#208#189#208#186#209#131

# hash value = 123219136
unit1.message68=#208#166#208#178#208#181#209#130#208#189#208#176#209#143' '+
#208#184#208#186#208#190#208#189#208#186#208#176

# hash value = 264188064
unit1.message69=#208#167#208#181#209'€'#208#189#208#190'-'#208#177#208#181+
#208#187#208#176#209#143' '#208#184#208#186#208#190#208#189#208#186#208#176+


# hash value = 266034154
unit1.message70=#208#146#208#178#208#181#208#180#208#184#209#130#208#181' '+
#208#191#208#176#209'€'#208#190#208#187#209#140' root:'


# hash value = 151272558
unit1.message71=#208#158#209#136#208#184#208#177#208#186#208#176' '#208#190+
#209#130#208#190#208#177#209'€'#208#176#208#182#208#181#208#189#208#184#209+
#143' '#208#184#208#186#208#190#208#189#208#186#208#184' '#208#178' '#209+
#130#209'€'#208#181#208#181'. '#208#152#209#129#208#191#208#190#208#187#209+
#140#208#183#209#131#208#185#209#130#208#181' '#208#178#208#188#208#181#209+
#129#209#130#208#190' ponoff '#209#129#208#186#209'€'#208#184#208#191#209+
#130' /usr/bin/vpnlinux. '#208#144#208#178#209#130#208#190#208#188#208#176+
#209#130#208#184#209#135#208#181#209#129#208#186#208#190#208#181' '#208#191+
#208#181#209'€'#208#181#208#186#208#187#209#142#209#135#208#181#208#189#208+
#184#208#181' '#208#189#208#176' '#208#178#208#184#208#180#208#182#208#181+
#209#130'.'


# hash value = 114830142
unit1.message72=#208#148#208#187#209#143' '#208#183#208#176#208#191#209#131+
#209#129#208#186#208#176' '#209#129' '#208#191#209'€'#208#176#208#178#208+
#176#208#188#208#184' root '#209#130#209'€'#208#181#208#177#209#131#208#181+
#209#130#209#129#209#143' '#209#135#209#130#208#190'-'#208#189#208#184#208+
#177#209#131#208#180#209#140': xroot/kdesu/gksu/beesu. '#208#160#208#181#208+
#186#208#190#208#188#208#181#208#189#208#180#209#131#208#181#209#130#209#129+
#209#143' '#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208#184+
#209#130#209#140' '#208#191#208#176#208#186#208#181#209#130' xroot.'

